[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/player/Player.gd" type="Script" id=1]
[ext_resource path="res://graphics/plane/aviao1.png" type="Texture" id=2]
[ext_resource path="res://sound/sfc/Hi-hat__010.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.93139, 12.6288 )

[sub_resource type="Animation" id=3]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 144, 530 ), Vector2( 144, 440 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "IFrames"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.356863 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0.926937 )
position = Vector2( 144, 490 )
z_index = 1
collision_layer = 34
collision_mask = 92
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "normal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0852585, 1.36412 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -18 )

[node name="TimerShoot" type="Timer" parent="."]
process_mode = 0
wait_time = 0.13

[node name="TimerScore" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 3 )

[node name="TimerIFrames" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/IFrames = SubResource( 4 )

[node name="TimerRespawn" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -60.0
pitch_scale = 0.5

[node name="TimerCDBomb" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="TimerShoot" to="." method="_on_TimerShoot_timeout"]
[connection signal="timeout" from="TimerScore" to="." method="_on_TimerScore_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="TimerIFrames" to="." method="_on_TimerIFrames_timeout"]
[connection signal="timeout" from="TimerRespawn" to="." method="_on_TimerRespawn_timeout"]
[connection signal="timeout" from="TimerCDBomb" to="." method="_on_TimerCDBomb_timeout"]
